--- a/education.html
+++ b/education.html
@@ -96,6 +96,10 @@
                                 </a>
                             </li>
                         </ul> -->
+                        <p>&nbsp;</p>
+                        <p>&nbsp;</p>
+                        <p>&nbsp;</p>
+                        <p>&nbsp;</p>
                         <div class="small text-center text-muted fst-italic">Copyright &copy; Kim Sierski 2023</div>
                     </div>
                 </div>
