--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
-        <link rel="stylesheet" href="css/overwrite.css" typer="text/css">
+        <link rel="stylesheet" href="css/overwrite.css" type="text/css">
     </head>
     <body>
         <!-- Navigation-->
@@ -31,19 +31,20 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="education.html">Education</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="experience.html">Experience</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="skills.html">Skills</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('images/hex.jpeg')">
+        <header class="masthead" style="background-image: url('images/water.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
                             <h1>Contact Me</h1>
-                            <span class="subheading">Have questions? I have answers.</span>
+                            <!-- <span class="subheading">Have questions? I have answers.</span> -->
                         </div>
                     </div>
                 </div>
@@ -112,7 +113,7 @@
             </div>
         </main>
         <!-- Footer-->
-        <footer class="border-top" style="background-image: url('images/hex.jpeg')">
+        <footer class="border-top" style="background-image: url('images/water.jpg')">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
