--- a/education.html
+++ b/education.html
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
-        <link rel="stylesheet" href="css/overwrite.css" typer="text/css">
+        <link rel="stylesheet" href="css/overwrite.css" type="text/css">
     </head>
     <body>
         <!-- Navigation-->
@@ -31,6 +31,7 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="education.html">Education</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="experience.html">Experience</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="skills.html">Skills</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -43,7 +44,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
                             <h1>Education</h1>
-                            <span class="subheading">This is where I've prepared.</span>
+                            <!-- <span class="subheading">This is where I've prepared.</span> -->
                         </div>
                     </div>
                 </div>
@@ -58,8 +59,8 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p> -->
                         <ul class="arial" style="list-style-type: square">
-                            <li>Paul Mitchell the School | Provo, UT | graduate, cosmetology</li>
                             <li>Brigham Young University | Provo, UT | undergraduate, general studies</li>
+                            <li>Paul Mitchell the School | Provo, UT | graduate, cosmetology</li>
                         </ul>
                     </div>
                 </div>
@@ -96,6 +97,7 @@
                                 </a>
                             </li>
                         </ul> -->
+                        <p>&nbsp;</p>
                         <p>&nbsp;</p>
                         <p>&nbsp;</p>
                         <p>&nbsp;</p>
