--- a/experience.html
+++ b/experience.html
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
-        <link rel="stylesheet" href="css/overwrite.css" typer="text/css">
+        <link rel="stylesheet" href="css/overwrite.css" type="text/css">
     </head>
     <body>
         <!-- Navigation-->
@@ -31,6 +31,7 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="education.html">Education</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="experience.html">Experience</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="skills.html">Skills</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
                     </ul><br>
                 </div>
@@ -44,7 +45,7 @@
                         <div class="page-heading">
                             <h1>Experience
                             </h1>
-                            <span class="subheading">This is where I've practiced.</span>
+                            <!-- <span class="subheading">This is where I've practiced.</span> -->
                         </div>
                     </div>
                 </div>
@@ -62,7 +63,6 @@
                             <!-- <li>Salon Assistant, Bellagio; Las Vegas, NV - 2002-2004</li>
                             <li>Hair Stylist; UT, CA, NV - 1996-2001</li> -->
                         </ul>
-                        <p class="arial2">I have had an extraordinary career working as a skincare expert in world class, luxury resorts, while learning the art of five star service excellence within large scale, high volume spa facilities. During this time, I also gained vast knowledge and hands-on experience with a wide variety of professional skincare brands.</p>
                     </div>
                 </div>
             </div>
@@ -98,6 +98,10 @@
                                 </a>
                             </li>
                         </ul> -->
+                        <p>&nbsp;</p>
+                        <p>&nbsp;</p>
+                        <p>&nbsp;</p>
+                        <p>&nbsp;</p>
                         <div class="small text-center text-muted fst-italic">Copyright &copy; Kim Sierski 2023</div>
                     </div>
                 </div>
