--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p class="arial2">I have had an extraordinary career working as a skincare expert in world class, luxury spas, while learning the art of five star service excellence within large scale, high volume facilities. During this time, I also gained vast knowledge and hands-on experience with a wide variety of professional skincare brands.</p>
+                        <p class="arial2">I have had an extraordinary career working as a skincare expert in world class, luxury spas, while learning the art of five star service excellence within large scale, high volume resorts. During this time, I also gained vast knowledge and hands-on experience with a wide variety of professional skincare brands.</p>
                     </div>
                 </div>
             </div>
