--- a/education.html
+++ b/education.html
@@ -59,8 +59,8 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p> -->
                         <ul class="arial" style="list-style-type: square">
-                            <li>Brigham Young University | Provo, UT | undergraduate, general studies</li>
-                            <li>Paul Mitchell the School | Provo, UT | graduate, cosmetology</li>
+                            <li>Brigham Young University-Provo, UT<br>undergraduate, general studies</li>
+                            <li>Paul Mitchell the School-Provo, UT<br>graduate, cosmetology</li>
                         </ul>
                     </div>
                 </div>
