--- a/experience.html
+++ b/experience.html
@@ -38,7 +38,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('images/terazzo.jpeg')">
+        <header class="masthead" style="background-image: url('images/sand.jpeg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -57,9 +57,9 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <ul class="arial" style="list-style-type: square">
-                            <li>Aesthetician | Aria | Las Vegas, NV | 2009-2022</li>
-                            <li>Aesthetician | Wynn Resorts | Las Vegas, NV | 2005-2009</li>
-                            <li>Aesthetician | Bellagio | Las Vegas, NV | 2004-2005</li>
+                            <li>Aesthetician, Aria<br>Las Vegas, NV 2009-2022</li>
+                            <li>Aesthetician, Wynn Resorts<br>Las Vegas, NV 2005-2009</li>
+                            <li>Aesthetician, Bellagio<br>Las Vegas, NV 2004-2005</li>
                             <!-- <li>Salon Assistant, Bellagio; Las Vegas, NV - 2002-2004</li>
                             <li>Hair Stylist; UT, CA, NV - 1996-2001</li> -->
                         </ul>
@@ -68,7 +68,7 @@
             </div>
         </main>
         <!-- Footer-->
-        <footer class="border-top" style="background-image: url('images/terazzo.jpeg')">
+        <footer class="border-top" style="background-image: url('images/sand.jpeg')">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
