--- a/skills.html
+++ b/skills.html
@@ -38,7 +38,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('images/sand.jpeg')">
+        <header class="masthead" style="background-image: url('images/terazzo.jpeg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -74,7 +74,7 @@
             </div>
         </main>
         <!-- Footer-->
-        <footer class="border-top" style="background-image: url('images/sand.jpeg')">
+        <footer class="border-top" style="background-image: url('images/terazzo.jpeg')">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
