--- a/fromscratch.html
+++ b/fromscratch.html
@@ -12,8 +12,8 @@
         <a href="index.html" target="_blank" class="floatr">My Resume</a><br>
     </div>
     <div class="custom bodyupper">
-        <h2 class="floatr">Watch the video to learn more about <br>Goldendoodles:</h2>
-        <h2>Click the links for answers<br>to frequently asked questions:</h2>
+        <h2 class="floatr">Watch this video to learn more about <br>Goldendoodles:</h2>
+        <h2>Click these links for answers<br>to frequently asked questions:</h2>
         <p>
         <a href="#faq1">FAQ1</a>  | 
         <a href="#faq2">FAQ2</a>  | 
