--- a/fromscratch.html
+++ b/fromscratch.html
@@ -13,7 +13,7 @@
     </div>
     <div class="custom bodyupper">
         <h2 class="floatr">Watch this video to learn more about <br>Goldendoodles:</h2>
-        <h2>Click these links for answers<br>to frequently asked questions:</h2>
+        <h2>Click these links for frequently asked questions:</h2>
         <p>
         <a href="#faq1">FAQ1</a>  | 
         <a href="#faq2">FAQ2</a>  | 
@@ -34,35 +34,35 @@
     </div>
     <div class="custom bodyl">
     <ol> 
-        <li><h2 id="top">What is a Goldendoodle?</h2>
+        <li><h2 id="faq1" >What is a Goldendoodle?</h2>
             <ul style="list-style-type: disc">
-                <li> <a href="https://www.dailypaws.com/dogs-puppies/dog-breeds/goldendoodle" id="faq1" target="_blank" title="Goldendoodle Basics">Learn the Goldendoodle Basics</a></li>
+                <li> <a href="https://www.dailypaws.com/dogs-puppies/dog-breeds/goldendoodle" target="_blank" title="Goldendoodle Basics">Learn the Goldendoodle Basics</a></li>
             </ul>
         </li> 
-        <li><h2>What do Doodles like to do for fun?</h2>
+        <li><h2 id="faq2">What do Doodles like to do for fun?</h2>
             <ul style="list-style-type: disc">
-                <li> <a href="https://www.happygodoodle.com/things-do-with-your-dog-fun/" id="faq2" target="_blank" title="Doodle Enrichment Activites">Fun Activites for Doodles</a></li>
+                <li> <a href="https://www.happygodoodle.com/things-do-with-your-dog-fun/" target="_blank" title="Doodle Enrichment Activites">Fun Activites for Doodles</a></li>
             </ul>
         </li>
-        <li><h2>What do Goldendoodles eat?</h2>
+        <li><h2 id="faq3">What do Goldendoodles eat?</h2>
             <ul style="list-style-type: disc">
-                <li> <a href="https://goldendoodleadvice.com/the-ultimate-guide-to-what-a-goldendoodle-can-and-cannot-eat/" id="faq3" target="_blank" title="Foods for Goldendoodles">Foods for Doods</a></li>
+                <li> <a href="https://goldendoodleadvice.com/the-ultimate-guide-to-what-a-goldendoodle-can-and-cannot-eat/" target="_blank" title="Foods for Goldendoodles">Foods for Doods</a></li>
             </ul>
         </li>
-        <li><h2>Where can I get a Goldendoodle?</h2>
+        <li><h2 id="faq4">Where can I get a Goldendoodle?</h2>
             <ul style="list-style-type: disc">
-                <li> <a href="https://www.happygodoodle.com/reputable-goldendoodle-breeders/" id="faq4" target="_blank" title="Goldendoodle Adoption Tips">Goldendoodle Adoption Advice</a></li>
+                <li> <a href="https://www.happygodoodle.com/reputable-goldendoodle-breeders/" target="_blank" title="Goldendoodle Adoption Tips">Goldendoodle Adoption Advice</a></li>
             </ul>
         </li>
-        <li><h2>How can I groom my doodle at home?</h2>
+        <li><h2 id="faq5">How can I groom my doodle at home?</h2>
             <ul style="list-style-type: disc;">
-                <li> <a href="https://www.happygodoodle.com/goldendoodle-grooming-how-to/" id="faq5" target="_blank" title="Groom Your Doodle">At Home Dog Spaw Tips</a></li>
+                <li> <a href="https://www.happygodoodle.com/goldendoodle-grooming-how-to/" target="_blank" title="Groom Your Doodle">At Home Dog Spaw Tips</a></li>
             </ul>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
-            <a href="#top">Back to Top </a>
+            <a href="#faq1">Back to Top </a>
             <p>&nbsp;</p>
         </li>
     </ol>
