--- a/fromscratch.html
+++ b/fromscratch.html
@@ -39,7 +39,7 @@
                 <li> <a href="https://www.dailypaws.com/dogs-puppies/dog-breeds/goldendoodle" target="_blank" title="Goldendoodle Basics">Learn the Goldendoodle Basics</a></li>
             </ul>
         </li> 
-        <li><h2 id="faq2">What do Doodles like to do for fun?</h2>
+        <li><h2 id="faq2">What do doodles like to do for fun?</h2>
             <ul style="list-style-type: disc">
                 <li> <a href="https://www.happygodoodle.com/things-do-with-your-dog-fun/" target="_blank" title="Doodle Enrichment Activites">Fun Activites for Doodles</a></li>
             </ul>
